--- a/sites/all/themes/JBW/css/global.css
+++ b/sites/all/themes/JBW/css/global.css
@@ -1,5 +1,5 @@
-/* This file will hold styles for the mobile version of your website (mobile first). */
-/* This also can include ANY global CSS that applies site-wide. Unless overwritten by a more specific style rule, CSS declarations in global.css will apply site-wide. */
+/*Обновленный глобал*/
+
 article,
 aside,
 details,
@@ -13,8 +13,10 @@ nav,
 section { 
     display: block;
 }
-
-@media screen and (min-width: 1280px) and (max-width: 2560px) and (device-aspect-ratio: 16/10){
+#background-image{
+    z-index: 1;
+}
+/*@media screen and (min-width: 1280px) and (max-width: 2560px){
         body{
             background-attachment: fixed;
             background-clip: border-box;
@@ -25,141 +27,160 @@ section {
             background-repeat: no-repeat;
             background-size: cover;
         }
-}
-
-@media screen and (min-width: 1280px) and (max-width: 2560px) /*and (device-aspect-ratio: 16/9)*/{
-        body{
-            background-attachment: fixed;
-            background-clip: border-box;
-            background-color: transparent;
-            background-image: url(../images/bg/bg_1280px.jpg);
-            background-origin: padding-box;
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            
-          /*  background: url(../images/bg/bg_1280px.jpg) no-repeat;
-            background-size: 100%;
-            -moz-background-size: 100%; /* Firefox 3.6+ */
-           /* -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
-            /*-o-background-size: 100%; /* Opera 9.6+ */
-        }
-}
-
-@media screen and (min-width: 1280px) and (max-width: 2560px) and (device-aspect-ratio: 8/5){
-        body{            
-            background-attachment: fixed;
-            background-clip: border-box;
-            background-color: transparent;
-            background-image: url(../images/bg/bg_1440px.jpg);
-            background-origin: padding-box;
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-}
-
-@media screen and (min-width: 1280px) and (max-width: 2560px) and (device-aspect-ratio: 5/4){
-        body{
-            background-attachment: fixed;
-            background-clip: border-box;
-            background-color: transparent;
-            background-image: url(../images/bg/bg_1280px.jpg);
-            background-origin: padding-box;
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-}
-
-@media screen and (min-width: 1280px) and (max-width: 2560px) and (device-aspect-ratio: 5/3){
-        body{
-            background-attachment: fixed;
-            background-clip: border-box;
-            background-color: transparent;
-            background-image: url(../images/bg/bg_1280px.jpg);
-            background-origin: padding-box;
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-}
-
-@media screen and (min-width: 1280px) and (max-width: 2560px) and (device-aspect-ratio: 4/3){
-        body{
-            background-attachment: fixed;
-            background-clip: border-box;
-            background-color: transparent;
-            background-image: url(../images/bg/bg_1440px.jpg);
-            background-origin: padding-box;
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-}
-
+}*/
 
 /*body{
-     background: url(../images/bg_2560px.jpg) no-repeat;
+    background: url(../images/bg_2560px.jpg) no-repeat;
 }*/
 
 #page{
     margin: 0 auto;
-    padding: 0;
     width: 1020px;
-    /*height: 1820px;*/
-    /*background: url(../images/bg.png) no-repeat;*/
-    /*position: relative;*/
+    z-index: 2;
 }
 
-/*header*/
+/*-----------------Site sections------------*/
 #section-header{
-    /*width: 1020px;*/
+    width: 1020px;
     height: 430px;
+    z-index: 2;
 }
 
-#zone-branding-wrapper{
-    width: 960px;
-    height: 113px;
-    padding-left: 30px;
-    padding-right: 30px;
-    /*position: absolute;*/
+#section-content{
+    width: 1020px;
     position: relative;
-    /*background: url(../images/header/header.png) no-repeat center 0; */
+    top: 20px;
+    z-index: 2;
 }
 
+#section-footer{
+    display: none;
+    /*clear: both;*/
+    position: relative;
+    top: 20px;
+    width: 1020px;
+    z-index: 2;
+}
+
+/*-------------------Wrappers---------------*/
+#zone-branding-wrapper{
+    margin: 0 auto;
+    width: 960px;
+    z-index: 2;
+}
+
+#zone-menu-wrapper{
+    margin: 0 auto;
+    width: 960px;
+    position: relative;
+    top: 5px;
+    z-index: 2;
+}
+
+#zone-header-wrapper{
+    margin: 0 auto;
+    width: 960px;
+    position: relative;
+    top: 15px;
+    z-index: 2;
+}
+
+#zone-content-wrapper{
+    margin: 0 auto;
+    width: 960px;
+    z-index: 2;
+}
+
+#zone-footer-wrapper{
+    margin: 0 auto;
+    width: 960px;
+    z-index: 2;
+}
+
+/*------------------------------------------------------------*/
 #zone-branding{
+    margin: 0 auto;
     width: 960px;
-    height: 113px;
 }
 
+#zone-menu{
+    margin: 0 auto;
+    width: 960px;
+}
+
+#zone-header{
+    margin: 0 auto;
+    width: 960px;
+}
+
+#zone-content{
+    margin: 0 auto;
+    width: 960px;
+}
+
+#zone-footer{
+    margin: 0 auto;
+    width: 960px;
+}
+
+/*----------------Regions--------------------*/
 #region-branding{
+    margin: 0 auto;
+    width: 960px;
+    height: 113px;
+    background: #FFFFFF;
+    z-index: 2;
+}
+
+#region-menu{
+    margin: 0 auto;
+    width: 960px;
+    height: 32px;
+    background: #FFFFFF;
+    z-index: 2;
+}
+
+#region-header{
+    margin: 0 auto;
+    width: 960px;
+    height: 262px;
+    background: #FFFFFF;
+    z-index: 2;
+}
+
+#region-content{
     margin: 0;
-    width: 960px;
-    height: 113px;
-    background: white;
+    padding: 0;
+    width: 550px;
+    float: left;
 }
 
-.branding-data{
-    width: 960px;
-    height: 113px;
+#region-sidebar{
+    margin: 0;
+    margin-left: 15px;
+    padding: 0;
+    width: 395px;
+    float: right;
 }
 
-/*pattern in the right corner*/
+#region-footer{
+    margin: 0 auto;
+    width: 960px;
+    height: 42px;
+    background: #FFFFFF;
+    z-index: 2;
+}
+/*------------------------pattern in the right corner--------------------*/
 #pattern img{
     float: right;
-    /*padding-top: 5px;*/
     position: absolute;
     top: 5px;
     right: 0;
-    z-index: 1;
-    /*margin-right: 10px;*/
-    /*margin-top: 5px;*/
+    z-index: 3;
 }
 
-/*site slogan*/
+/*-------------------------site slogan-----------------------------------*/
 .site-slogan{
-    display: block;
     width: 300px;
     height: 40px;
     float: right;
@@ -169,38 +190,8 @@ section {
     z-index: 10;
 }
 
-/*zone menu*/
-#zone-menu-wrapper{
-    width: 960px;
-    height: 32px;
-    padding-left: 30px;
-    padding-right: 30px;
-    /*position: absolute; */
-    position: relative;
-    top: 5px;
-    /*background: url(../images/header/menu_bg.png) no-repeat center 0;*/
-}
-
-#zone-menu{
-    width: 960px;
-    height: 32px;
-}
-
-#region-menu{
-    margin: 0;
-    width: 960px;
-    height: 32px;
-    background: white;
-}
-
-/*Share component*/
+/*-------------------------Share component---------------------------------*/
 #block-sharethis-sharethis-block{
-    /*display: block;
-    width: 110px;
-    position: relative;
-    top: -25px;
-    float: right;
-    z-index: 20;*/
     float: right;
     position: absolute;
     right: 5px;
@@ -209,66 +200,3 @@ section {
     z-index: 20;
 }
 
-
-/*section content*/
-#section-content{
-    position: relative;
-    top: 20px;
-    width: 1020px;
-    height: 1325px; 
-}
-
-#zone-content-wrapper{
-    margin: 0;
-    padding: 0;
-    width: 960px;
-    padding-left: 30px;
-    padding-right: 30px;
-    position: relative;  
-    /*top: 20px;*/
-}
-
-#zone-content{
-    margin: 0;
-    padding: 0;
-    width: 960px;
-}
-
-
-/*section footer*/
-#section-footer{
-    /*top: 30px;*/
-    /*width: 1020px;
-    height: 42px; */
-    clear: both;
-}
-
-#zone-footer-wrapper{
-    width: 960px;
-    height: 42px;
-    padding-left: 30px;
-    padding-right: 30px;
-    /*position: relative;  */
-    position: absolute;
-    /*top: 1780px;*/
-    top: 1807px;
-    /*top: 458px;*/
-   /* background: url(../images/footer/footer_bg.png) no-repeat center 0;*/
-}
-
-#zone-footer{
-    width: 960px;
-    height: 42px;
-}
-
-#region-footer{
-    margin: 0;
-    width: 960px;
-    height: 42px;
-    background: white;
-}
-
-#block-system-powered-by{
-    float: left;
-    margin: 10px 10px;
-}
