--- a/sites/all/themes/JBW/css/nice_menus.css
+++ b/sites/all/themes/JBW/css/nice_menus.css
@@ -18,7 +18,7 @@ ul.nice-menu ul {
   list-style: none;
   padding: 0;
   margin: 0;
-  border-top: 1px solid #ccc;
+  /*border-top: 1px solid #ccc;*/
 }
 
 ul.nice-menu li {
@@ -34,6 +34,10 @@ ul.nice-menu a {
   padding: 0.4em 10px 0.4em 10px;
   text-decoration: none;
   color: black;
+}
+
+ul.nice-menu a:hover {
+    text-decoration: underline;
 }
 
 ul.nice-menu ul {
@@ -67,9 +71,9 @@ ul.nice-menu-down {
   border: 0;
 }
 
-ul.nice-menu-down li {
+/*ul.nice-menu-down li {
   border-top: 1px solid #ccc;
-}
+}*/
 
 ul.nice-menu-down li li {
   border-top: 0;
@@ -96,18 +100,19 @@ ul.nice-menu-down .menuparent a {
   padding-right: 15px; /* LTR */
 }
 
+/*
 ul.nice-menu-down li.menuparent {
- /* background: #eee url(arrow-down.png) right center no-repeat; /* LTR */
+  background: #eee url(arrow-down.png) right center no-repeat; 
 }
 
 ul.nice-menu-down li.menuparent:hover {
-  background: #ccc url(arrow-down.png) right center no-repeat; /* LTR */
+  background: #ccc url(arrow-down.png) right center no-repeat; 
 }
 
 ul.nice-menu-down li li.menuparent {
-  background: #eee url(arrow-right.png) right center no-repeat; /* LTR */
+  background: #eee url(arrow-right.png) right center no-repeat;*
 }
 
 ul.nice-menu-down li li.menuparent:hover {
-  background: #ccc url(arrow-right.png) right center no-repeat; /* LTR */
-}
+  background: #ccc url(arrow-right.png) right center no-repeat; 
+}*/
