--- a/sites/all/themes/JBW/css/sidebar.css
+++ b/sites/all/themes/JBW/css/sidebar.css
@@ -1,10 +1,10 @@
-#region-sidebar{
+/*#region-sidebar{
     margin: 0;
     padding: 0;
-    /*width: 380px;*/
+    /*width: 380px;/
     width: 395px;
     margin-left: 15px;
-}
+}*/
 
 #scrollbarY  section{ /*.overview .block*/
     /*width: 370px;*/
