--- a/sites/all/themes/JBW/css/slider.css
+++ b/sites/all/themes/JBW/css/slider.css
@@ -1,15 +1,15 @@
-#zone-header-wrapper{
+/*#zone-header-wrapper{
     width: 960px;
     height: 262px;
     margin-left: 30px;
     margin-right: 30px;
     /*padding-left: 30px;
-    padding-right: 30px;*/
+    padding-right: 30px;/
     position: relative;
     top: 15px;
-    /*background: url(../images/slider/slider_bg.png) no-repeat center 0;*/
-    /*background: white;*/
-}
+    /*background: url(../images/slider/slider_bg.png) no-repeat center 0;/
+    /*background: white;/
+}*/
 
 #zone-header{
     margin: 0;
