--- a/sites/all/themes/JBW/css/content.css
+++ b/sites/all/themes/JBW/css/content.css
@@ -1,3 +1,7 @@
+/*.page-node .region-content-inner{
+    background: #FFFFFF;
+}*/
+
 /*#region-content{
     margin: 0;
     padding: 0;
@@ -11,6 +15,10 @@
     padding: 0;
     width: 550px;
 }*/
+
+ul.primary{
+    margin-top: 0;
+}
 
 /*left part of content*/
 .page-home .fest_row_homepage{ /*#block-system-main .pane-festivals*/
@@ -68,7 +76,9 @@
     z-index: 10;
 }
 
-.page-home .fest_row_homepage .sharethis-wrapper{
+.page-home .fest_row_homepage .sharethis-wrapper
+/*.page-node .views-field-sharethis*/
+{
     position: absolute;
     float: right;
     /*width: 110px;*/
