--- a/sites/all/themes/JBW/css/sidebar.css
+++ b/sites/all/themes/JBW/css/sidebar.css
@@ -7,7 +7,7 @@
 }*/
 
 #scrollbarY  section{ /*.overview .block*/
-    /*width: 370px;*/
+    width: 370px;
     /*margin-top: 10px;*/
     position: relative;
     /*background: url(../images/content/region-sidebar.png) no-repeat 0 0;*/
@@ -24,13 +24,14 @@
 }
 
 
-.overview section{
-    padding: 10px;
+#scrollbarY  section .block-inner{
+    /*padding: 5px;*/
+    
 }
 
 
 #scrollbarY { width: 395px;/* margin: 20px 0 10px;*/}
-#scrollbarY .viewport { width: 380px; /*min-*/height: 120px; overflow: hidden; position: relative;}
+#scrollbarY .viewport { width: 380px; /*min-*/height: 1200px; overflow: hidden; position: relative;}
 #scrollbarY .overview { list-style: none; position: absolute; left: 0; top: 0; padding: 0; margin: 0; }
 #scrollbarY .scrollbar{ background: transparent url(sb/bg-scrollbar-track-y.png) no-repeat 0 0; position: relative; background-position: 0 0; float: right; width: 15px; }
 #scrollbarY .track { background: transparent url(sb/bg-scrollbar-trackend-y.png) no-repeat 0 100%; height: 100%; width:13px; position: relative; padding: 0 1px; }
