--- a/sites/all/themes/JBW/css/pager.css
+++ b/sites/all/themes/JBW/css/pager.css
@@ -62,6 +62,7 @@
     right: 20px;
     top: 26px;
     width: 65px;
+    float: right;
 }
 
 #block-system-main #pager-down{
@@ -69,6 +70,7 @@
     right: 20px;
     bottom: 6px;
     width: 65px;
+    float: right;
 }
 
 #block-system-main .pager .pager-item{
